@@ -4,6 +4,7 @@ import com.dataplatform.lineage.dto.LineageGraphDTO;
 import com.dataplatform.lineage.entity.nodes.TableNode;
 import com.dataplatform.lineage.service.LineageService;
 import org.springframework.stereotype.Service;
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -18,12 +19,12 @@ public class LineageServiceImpl implements LineageService {
     @Override
     public List<TableNode> getUpstreamLineage(String tableName, Integer depth) {
         // TODO: 实现上游血缘关系查询逻辑
-        return List.of();
+        return Collections.emptyList();
     }
     
     @Override
     public List<TableNode> getDownstreamLineage(String tableName, Integer depth) {
         // TODO: 实现下游血缘关系查询逻辑
-        return List.of();
+        return Collections.emptyList();
     }
 }
